--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -4,3 +4,8 @@
   margin: 0 auto;
   @apply relative pb-[100px];
 }
+@media only screen and (max-width: 767px) {
+  .container {
+    padding: 0 10px;
+  }
+}
